# vicgent

./: .gitignore  .pylintrc  LICENSE  graph_app.py  mcp_interface.py  pyproject.toml
reference/: llm_util_guide.md  structure.md  toolnode_demo.md  uv_guide.md
src/vicgent/: __init__.py
src/vicgent/core/: __init__.py  extractor.py  hello.py  supervisor.py
src/vicgent/interface/: __init__.py  hello.py
src/vicgent/util/: LLMUtil.py  __init__.py  agent_selector.py  file_util.py  hello.py  structured_output.py
