[project]
name = "vicgent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fastapi-mcp>=0.4.0",
    "grandalf>=0.8",
    "langchain-openai>=0.3.32",
    "langchain-siliconflow>=0.1.1",
    "langchain[anthropic]>=0.3.27",
    "langgraph>=0.6.6",
    "langgraph-cli[inmem]>=0.4.0",
    "langserve>=0.3.1",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pylint>=3.3.8",
    "vicgent",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
vicgent = { workspace = true }
